# deck

./: .gitignore  .travis.yml  Cargo.toml  LICENSE  Makefile  README.md  slides.md
.github/workflows/: cd.yml  ci.yml
src/: error.rs  html.rs  main.rs  script.js  server.rs  style.css
tools/: package.json  pdf.js
