[package]
name = "deck"
version = "0.2.0"
authors = ["Florian Dehau <work@fdehau.com>"]
description = """
A command line tool to generate HTML presentations from Markdown documents
"""
edition = "2018"
keywords = ["cli", "presentation", "slides", "markdown"]
repository = "https://github.com/fdehau/deck"
license = "MIT"
exclude = ["tools/*"]

[dependencies]
pulldown-cmark = "0.3"
syntect = "3.0"
structopt = "0.2"
warp = "0.1"
futures = "0.1"
log = "0.4"
pretty_env_logger = "0.3"
minifier = "0.0.28"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
inotify = "0.7"
tokio = "0.1"
